[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "riscv-cheri"
dynamic = ["version"]
description = "RISC-V CHERI Specification"
requires-python = ">=3.10"

[tool.hatch.version]
path = "Makefile"
pattern = 'NEXT_VERSION\s*=\s*v?(?P<version>[0-9.]+)'

[tool.ruff]
line-length = 120

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
